fixed overflow

--- a/app/index.css
+++ b/app/index.css
@@ -6,6 +6,7 @@ body {
 	height: 100%;
 	width: 100%;
 	background-color: black;
+	overflow: hidden;
 }
 #centerDiv {
 	height: 100%;
